--- a/index.html
+++ b/index.html
@@ -2,9 +2,39 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Broadway Design</title>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <h1>Broadway Design</h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html">Process</a></li>
+      <li><a href="index.html">Work</a></li>
+      <li><a href="index.html">Team</a></li>
+      <li><a href="index.html">Contact</a></li>
+    </ul>
+    <h2>Our Process</h2>
+    <h3>Identify</h3>
+      <img src="resources/image/identify.svg">
+    <p>We focus on the most important details.</p>
+    <h3>Understand</h3>
+      <img src="resources/image/understand.svg">
+    <p>We study our projects inside and out.</p>
+    <h3>Execute</h3>
+      <img src="resources/image/execute.svg">
+    <p>We put everything we have into our work.</p>
+    <h3>Designed in New York/<h3>
+    <h3>Execute</h3>
+    <p>Coming soon</p>
+    <h3>Team</h3>
+    <p>We're Hiring!</p>
+    <h3>Contact</h3>
+    <p>Phone: (555)-555-5555<br />
+    E-mail: test@example.com<br />
+  Twitter: @test</p>
+  <p>© Broadway 2017 <a href="#contact">Home</a> <a href="#contact">About</a> <a href="#contact">Work</a> <a href="#contact">Team</a> <a href="#contact">Contact</a></p>
+
 
   </body>
 </html>
