--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Broadway Design</h1>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="index.html">Process</a></li>
-      <li><a href="index.html">Work</a></li>
-      <li><a href="index.html">Team</a></li>
-      <li><a href="index.html">Contact</a></li>
-    </ul>
+    <div class="backgroundrow">
+      <h1>Broadway Design</h1>
+      <a href="index.html" class = "menu">Home</a><br />
+      <a href="index.html" class = "menu">Process</a><br />
+      <a href="index.html" class = "menu">Work</a><br />
+      <a href="index.html" class = "menu">Team</a><br />
+      <a href="index.html" class = "menu">Contact</a><br />
+    </div>
     <h2>Our Process</h2>
     <h3>Identify</h3>
       <img src="resources/image/identify.svg">
@@ -24,7 +24,7 @@
     <h3>Execute</h3>
       <img src="resources/image/execute.svg">
     <p>We put everything we have into our work.</p>
-    <h3>Designed in New York/<h3>
+    <div class="backgroundrow"><h3>Designed in New York</h3></div>
     <h3>Execute</h3>
     <p>Coming soon</p>
     <h3>Team</h3>
@@ -33,8 +33,8 @@
     <p>Phone: (555)-555-5555<br />
     E-mail: test@example.com<br />
   Twitter: @test</p>
-  <p>© Broadway 2017 <a href="#contact">Home</a> <a href="#contact">About</a> <a href="#contact">Work</a> <a href="#contact">Team</a> <a href="#contact">Contact</a></p>
-
-
+  <div class=footer>
+    <p>© Broadway 2017 <a href="#contact" class = "menu">Home</a> <a href="#contact" class = "menu">About</a> <a href="#contact" class = "menu">Work</a> <a href="#contact" class = "menu">Team</a> <a href="#contact" class = "menu">Contact</a></p>
+  </div>
   </body>
 </html>
